[package]
name = "sqlite"
version = "0.32.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = [
    "Alec Moskvin <alecm@gmx.com>",
    "Angel Leon <gubatron@gmail.com>",
    "Cecile Tonglet <cecile.tonglet@cecton.com>",
    "Daniel Dulaney <ddy@vitronic.com>",
    "Ivan Stankovic <pokemon@fly.srk.fer.hr>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jake Kerr <kodafox@gmail.com>",
    "James Haywood <jameshaywood@fastmail.com>",
    "Jayson Reis <santosdosreis@gmail.com>",
    "Jonatan Lemes <jlemes@lenovo.com>",
    "Pierre Krieger <pierre.krieger1708@gmail.com>",
    "Sean Klein <seanmarionklein@gmail.com>",
    "Sophie Tauchert <999eagle@999eagle.moe>",
    "Tomoki Aonuma <uasi@uasi.jp>",
    "Vincenzo Palazzo <vincenzopalazzodev@gmail.com>",
    "Yorhel <git@yorhel.nl>",
]
description = "The package provides an interface to SQLite."
documentation = "https://docs.rs/sqlite"
homepage = "https://github.com/stainless-steel/sqlite"
repository = "https://github.com/stainless-steel/sqlite"
readme = "README.md"
categories = ["api-bindings", "database"]
keywords = ["database"]

[features]
default = ["linkage"]
bundled = ["sqlite3-sys/bundled"]
linkage = ["sqlite3-sys/linkage"]

[dependencies]
libc = "0.2"

[dependencies.sqlite3-sys]
version = "0.15"
default-features = false

[dev-dependencies]
temporary = "0.6"
